<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/draw_color" >
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/red" android:title="@string/red_title"/>
                <item android:id="@+id/green" android:title="@string/green_title"/>
                <item android:id="@+id/blue" android:title="@string/blue_title"/>
            </group>
        </menu>
    </item>
    <item android:title="@string/draw_width" >
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/width_1" android:title="@string/width_1"/>
                <item android:id="@+id/width_2" android:title="@string/width_2"/>
                <item android:id="@+id/width_3" android:title="@string/width_3"/>
            </group>
        </menu>
    </item>

    <item android:id="@+id/blur" android:title="@string/draw_blur"/>
    <item android:id="@+id/emboss" android:title="@string/draw_emboss"/>

</menu>